[gd_scene load_steps=8 format=2]

[ext_resource path="res://gui/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://gui/GUI_theme.tres" type="Theme" id=2]
[ext_resource path="res://gui/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://gui/textures/title.png" type="Texture" id=4]
[ext_resource path="res://gui/Options.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.862745 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 1, 1, 1, 0.862745 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
color = Color( 0.384314, 0.384314, 0.384314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CanvasModulate")
anims/fade = SubResource( 1 )
anims/stop = SubResource( 2 )

[node name="MainMenu" type="MarginContainer" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
theme = ExtResource( 2 )
custom_constants/margin_right = 120
custom_constants/margin_top = 40
custom_constants/margin_left = 120
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="MainMenu"]
margin_left = 120.0
margin_top = 40.0
margin_right = 1480.0
margin_bottom = 868.0
mouse_filter = 0
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="MainMenu/HBox"]
margin_left = 411.0
margin_right = 948.0
margin_bottom = 828.0
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="Logo" type="TextureRect" parent="MainMenu/HBox/Buttons"]
margin_right = 537.0
margin_bottom = 129.0
texture = ExtResource( 4 )
stretch_mode = 3

[node name="Continue" type="Button" parent="MainMenu/HBox/Buttons"]
margin_top = 149.0
margin_right = 537.0
margin_bottom = 233.0
custom_fonts/font = ExtResource( 1 )
text = "Continue"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="MainMenu/HBox/Buttons"]
margin_top = 253.0
margin_right = 537.0
margin_bottom = 337.0
custom_fonts/font = ExtResource( 1 )
text = "New Game"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="MainMenu/HBox/Buttons"]
margin_top = 357.0
margin_right = 537.0
margin_bottom = 441.0
custom_fonts/font = ExtResource( 1 )
text = "Load Game"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveGame" type="Button" parent="MainMenu/HBox/Buttons"]
margin_top = 461.0
margin_right = 537.0
margin_bottom = 545.0
custom_fonts/font = ExtResource( 1 )
text = "Save Game"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="MainMenu/HBox/Buttons"]
margin_top = 565.0
margin_right = 537.0
margin_bottom = 649.0
custom_fonts/font = ExtResource( 1 )
text = "Options"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="MainMenu/HBox/Buttons"]
margin_top = 669.0
margin_right = 537.0
margin_bottom = 828.0
theme = ExtResource( 2 )
text = "v 0.0.1
Archeologits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Savefiles" type="CenterContainer" parent="MainMenu/HBox"]
visible = false
margin_left = 541.0
margin_right = 1245.0
margin_bottom = 828.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MainMenu/HBox/Savefiles"]
margin_top = 120.0
margin_right = 704.0
margin_bottom = 708.0

[node name="ItemList" type="ItemList" parent="MainMenu/HBox/Savefiles/VBox"]
margin_right = 704.0
margin_bottom = 500.0
rect_min_size = Vector2( 700, 500 )

[node name="Buttons" type="HBoxContainer" parent="MainMenu/HBox/Savefiles/VBox"]
margin_top = 504.0
margin_right = 704.0
margin_bottom = 588.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButton" type="Button" parent="MainMenu/HBox/Savefiles/VBox/Buttons"]
margin_right = 350.0
margin_bottom = 84.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Save Game"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="MainMenu/HBox/Savefiles/VBox/Buttons"]
margin_left = 354.0
margin_right = 704.0
margin_bottom = 84.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Back"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="MainMenu/HBox" instance=ExtResource( 5 )]
visible = false

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 560.712
margin_top = 358.777
margin_right = 1027.71
margin_bottom = 544.777
theme = ExtResource( 2 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainMenu/HBox/Buttons/Continue" to="." method="_continue"]
[connection signal="pressed" from="MainMenu/HBox/Buttons/NewGame" to="." method="_new_game"]
[connection signal="pressed" from="MainMenu/HBox/Buttons/LoadGame" to="." method="_show_load_list"]
[connection signal="pressed" from="MainMenu/HBox/Buttons/SaveGame" to="." method="_show_save_list"]
[connection signal="pressed" from="MainMenu/HBox/Buttons/Options" to="." method="_options"]
[connection signal="pressed" from="MainMenu/HBox/Savefiles/VBox/Buttons/ActionButton" to="." method="_execute_action"]
[connection signal="pressed" from="MainMenu/HBox/Savefiles/VBox/Buttons/BackButton" to="." method="_show_buttons"]
